feat: add access control settings for registration and password recovery